--- a/LaTex/saturation_runoff_main.tex
+++ b/LaTex/saturation_runoff_main.tex
@@ -15,8 +15,8 @@
 
 \begin{document}
 
-\title{Surface runoff in relation to soil saturation in a simple SEB- model.}
-\date{2020\\ April}
+\title{Water- and energy balance output from a simple SEB- model with varying soil depth}
+\date{May 2020}
 \author{Eirik Nordgård\\ Geophysical Institute,\ University of Oslo}
 
 
@@ -24,7 +24,7 @@
 \begin{@twocolumnfalse}
 \maketitle
 \begin{abstract}
-In this paper a simple bucket model has been used to model the surface energy balance and the water balance with different soil depths over a two-year period. Water level, saturation level and surface runoff is analysed for bucket depths ranging from 0.2 to 1.0 meters. The deeper the soil layer was, the more precipitation was acquired to reach saturation. With a freezing condition prohibiting the soil water level to rise during periods of temperatures below zero, the deepest bucket almost went through the entire model run without reaching saturation for a drainage constant of 1 mm/day.     
+In this paper a simple bucket model has been used to model the surface energy balance and the water balance with different soil depths over a two-year period. Water level, saturation, surface runoff and energy fluxes is analysed for bucket depths of 0.1, 0.5 and 0.9 meters.  With a freezing condition prohibiting the soil water level to rise during periods of temperatures below zero, the deepest bucket almost went through the entire model run without reaching saturation. The other buckets saturated quickly resulting in both surface- and subsurface runoff relatively fast after rainfall events. The soil temperature variations was greatest for the shallowest bucket, causing this bucket to have largest fluctuations in latent heat, sensible heat, conduction and longwave radiation. 
 \end{abstract}
 
 All material for this project may be found on 
@@ -35,21 +35,17 @@ All material for this project may be found on
 \
 \section{Introduction}
 
-The main scope of the paper is to investigate how soil water saturation affects the surface and subsurface runoff in a simple bucket model with varying soil depth. \textit{Bucket depth} is analogous to \textit{soil depth}, meaning that a bucket with water represents soil on top of bedrock on a confined area. Like in nature, pouring water into the bucket beyond its capacity will cause surface runoff. This feature is modelled in its simplest way by defining the saturation of the bucket to be water level divided by bucket depth. Hence, a deeper bucket should experience less surface runoff compared to a shallow bucket. Subsurface flow is also modelled with a linear relationship to the saturation. The surface energy balance 
+The main scope of the paper is to investigate how the water- and energy balance in a simple surface energy balance model is affected by various bucket depths. \textit{Bucket depth} is analogous to \textit{soil depth}, meaning that a bucket with water represents soil on top of bedrock on a confined area. Like in nature, pouring water into the bucket beyond its capacity will cause surface runoff. This feature is modelled in its simplest way by defining the saturation of the bucket to be water level divided by bucket depth. Hence, a deeper bucket should experience less surface runoff compared to a shallow bucket. Subsurface flow is also modelled with a linear relationship to the 
 \\
 \\
-\\
-\\
-\\
-is of great importance to the bucket model since it dictates the water balance by defining whether the ground is frozen or not. In reality, surface runoff may occur even if the ground is frozen, but for simplicity the model allows no surface runoff once the ground temperature is below zero. 
-\\
-The paper is structured as follows. Theory in section 2. Section 3 is method. Section 4 is results and section 5 is discussion. Last, section 6 is future work. 
+saturation. The surface energy balance 
+is of great importance to the bucket model since it dictates the water balance by defining whether the ground is frozen or not. In reality, surface runoff may occur even if the ground is frozen, but for simplicity the model allows no surface runoff once the ground temperature is below zero. Also, the modelled surface temperature is very important as it is a key component of the turbulent fluxes and radiative terms. Keeping the energy input to a layer of soil constant should result in higher temperature for a shallow layer than a thick layer, hence making most energy fluxes into or out of a thin layer the largest. 
+The paper is structured as follows. Section 2 contains theory. Section 3 describes how the model is build. Section 4 is results and section 5 is discussion. 
 \
 \section{Theory}
 
 
 \subsection{Surface Energy Balance}
-\textbf{Within this paragraph, explain how the model deals with saturation and how its defined. }
 
 The surface energy balance is calculated for daily timesteps. Initially, the following forcing terms are given through point  measurements: Air temperature $T_{air}$, precipitation, incoming shortwave $S_{in} $and longwave radiation $L_{in}$, windspeed and specific humidity.
 Shortwave refelced radiation is calculated using the albedo, $\alpha$, in Eq. (\ref{eq:shortwave}).
@@ -58,7 +54,7 @@ Shortwave refelced radiation is calculated using the albedo, $\alpha$, in Eq. (\
 	\label{eq:shortwave}
 \end{equation}
 
-Albedo is set to 0.2. Stefan-Boltzmann law is then \textbf{source} used to calculate the longwave outgoing radiation in Eq. (\ref{eq:longwave}).
+Albedo is set to 0.2. Stefan-Boltzmann law is then used to calculate the longwave outgoing radiation in Eq. (\ref{eq:longwave}) \cite{dingman}.
 
 \begin{equation}
 	L_{out} = \sigma * (T_{surf}+273.15)^4
@@ -73,7 +69,7 @@ F_{cond} =
 -K*\frac{T_{surf}-T_{ground}}{(d_{surf}+d_{ground})/2}
 \end{equation}
 
-where $K = 3 Wm^{-1}k^{-1}$ is the thermal conductivity of rock \textbf{source}. 
+where $K = 3 Wm^{-1}k^{-1}$ is the thermal conductivity of rock \cite{labus}. 
 
 Sensible heat flux is calculated with Eq. (\ref{eq:sensibleheat})
 
@@ -103,9 +99,9 @@ To be used in the water balance, the evaporation, $E$, is:
 Ev = \frac{Q_e}{L_w*\rho_{water}}
 \end{equation}
 
-Now the complete energy balance is done for the surface layer  
+Now the complete energy balance is done for the surface layer \cite{dingman}  
 \begin{equation}
-	E_{surf} = E + S_{in}-S_{out}+L_{in}-L_{out}+F_{cond}-Q_h-Q_e
+	E_{surf} = E-S_{in}-S_{out}+L_{in}-L_{out}+F_{cond}-Q_h-Q_e
 	\label{eq:surfenergy}
 \end{equation}
 and the second layer:
@@ -125,9 +121,9 @@ In Eq. (\ref{eq:layertemp}) $c_h = 2.2*10^6 [Jm^{-3}K^{-1}]$ is the heat capacit
 \subsection{Water Balance}
 The water balance is based on conservation of mass, and describes the flow of water into and out of a closed system. This system may for example be a catchment, a lake or a column of soil. Used in areas like agriculture, runoff assessment or pollution control, making a water balance is a neat way to keep track of where the water in your system has come from and where it is going. 
 
-To quantitatively study the water balance it is necessary to distinguish the different contributing processes. In its simplest form, the water balance can be written as 
+To quantitatively study the water balance it is necessary to distinguish the different contributing processes. In its simplest form, the water balance can be written as \cite{dingman} 
 \begin{equation}
-	S = P - Ev - R - G 
+	S = P + Ev + R + G 
 	\label{eq:waterbalance}
 \end{equation}
 
@@ -148,12 +144,18 @@ This simple \textit{bucket model} used in this project is dependent on forcing t
 \subsection{Area}
 In this study forcing data from Finse is used to force the bucket model. Located at 1222 meters above sea level, on the northwestern part of the Hardangervidda plateau in Norway, Finse has a rather oceanic climate with mild winters for its altitude and cool summers \cite{finse}. Winter temperatures in the range of -20\textdegree C and summer temperatures in the range of 20\textdegree C is not uncommon. Monthly average precipitation was around 80mm between March 2019 and March 2020, peaking in September and October. Finse is very exposed to winds and frequently experiences winds in the range of 15-25 m/s \cite{yr}. 
 
-\subsection{Choosing bucket depth}
-Choosing size of the buckets in the model is done to best simulate the actual conditions at Finse. Located at relatively high altitude with very sparse vegetation the bucket depths is set to 0.2m, 0.4m, 0.6m, 0.8m and 1.0. This selection should cover the most common range of soil depths in Finse.
+Figure (\ref{fig:forcing}) shows air temperature and precipitation from the forcing data used in the model. Air temperatures ranges from around -25\textdegree C in winter to around 18\textdegree C in summer. Precipitation values in this dataset was extremely high, some values pushing 300 mm/day. The AROME model is known to overestimate precipitation in mountain regions and in general to overestimate large precipitation events \cite{muller}, but even taken this into account these values are extremely high for this area. One possible explanation for these high values is that all of the precipitation data points could be daily values, even though there are eight data points each day.  Therefore, in lack for more specific details on the dataset and given the seemingly strange values , a moving average for every day was applied. The result is shown as the black bars in Figure (\ref{fig:forcing}), showing the average daily precipitation values with maxima around 90 mm/day. These values appear to be more correct for the area in question.   
 
-\textbf{Two experiments will be done with the bucket model, one with a fixed initial water level for each bucket depth and one with a initial water level equal to half the bucket depth for each bucket depth. For the fixed bucket depth 0.1m is chosen. Finse is well above the tree line, and with very sparse vegetation and significant areas of bare mountain this serves as a estimate of averaged initial water content. YOU ARE NOT ACTUALLY DOING THIS YET}    
+\begin{figure}[h]
+	\centering 
+	\includegraphics[width=0.5\textwidth]{figures/precip}
+	\caption{Temperature (red) and precipitation(grey) data from forcing file. Daily mean values (black) printed for readability.}
+	\label{fig:forcing}
+\end{figure}
 
-Alternatively, run two versions one with freezing and one without. 
+
+\subsection{Choosing bucket depth, initial water level and drainage constant}
+Choosing size of the buckets in the model is done to best simulate the actual conditions at Finse. Located at relatively high altitude with very sparse vegetation the bucket depths is set to 0.1m, 0.5m and 0.9m, one shallow, one intermediate and one deep. This selection should cover the most common range of soil depths in Finse. Initial water depth is set to 0.05m to see how the water- and energy balance evolves from a relatively dry soil cover. Drainage constant is set to 1.5 mm/day. This is a guessed mean value for all bucket depths.    
 
 
 \section{Model Build}
@@ -161,37 +163,68 @@ Alternatively, run two versions one with freezing and one without.
 Being a very simple surface energy balance model, it is essentially build within two for-loops and a simple if-statement. Outermost is the loop iterating over the different bucket depths. Within is all necessary constants defined. Thereafter the surface energy balance and water balance is calculated for each timestep. The model is designed to develop surface- and subsurface runoff, but only if the temperature of the two soil layers are above freezing. Scripts associated with the model can be found in the GitHub link provided on the first page of the paper.         
 
 \section{Results}
-Explain the weather situation/data over the two years. Especially precipitation (with or without freezing.)
 
-Show in Figure (\ref{fig:forcing}), the forcing data used in the model includes a clear annual cycle in temperature. Temperatures ranges from around -25\textdegree C in winter to around 18\textdegree C in summer. The precipitation data in grey are daily values for every 3-hours. The AROME model is known (SOURCE) to overestimate precipitation in mountain regions and in general to overestimate large precipitation events, but even taken this into account the gray line values are extremely high for this area. Therefore, running a moving average for every day results in the black line, showing the average daily precipitation values with maxima around 90 mm/day. These values appear to be correct for the area in question.   
-
-\begin{figure}[h]
-	\centering 
-	\includegraphics[width=0.5\textwidth]{figures/forcing_finse}
-	\caption{Temperature (red) and precipitation(grey) data from forcing file. Daily mean values (black) printed for readability.}
-	\label{fig:forcing}
-\end{figure}
-
-The precipitation output from the bucket model results in Figure(\ref{fig:precip}). Now the precipitation flattens once the ground temperature drops below zero. The step-like feature in the second winter arises because the precipitation value is kept at the last recorded value with temperature above zero degrees.
+As many of the fluxes in the model is somehow dependent on the surface temperature, it should be the controlling factor for most of them. The surface temperature varies from around -25\textdegree C in winter to around 28\textdegree C in summer. There are greatest temperature variations in the smallest bucket. Overall difference in surface temperature between the different buckets is very small, not greater than around 3\textdegree C from the deepest to the shallowest in most cases. Also, the daily surface temperature variations are far greater during summer than winter.  
 
 \begin{figure}[h]
 	\centering 
-	\includegraphics[width=0.5\textwidth]{figures/precip}
-	\caption{Surface temperature (red) and precipitation(black) from the bucket model.}
-	\label{fig:precip}
-\end{figure}
+	\includegraphics[width=0.5\textwidth]{figures/t_surface}
+	\caption{Surface temperature with varying bucket depth.}
+	\label{fig:t1}
+\end{figure} 
 
-Once we have established that the model is not allowing freezing, we look at how the soil deals with precipitation events. First, the bucket model is set with a constant initial water level of 0.1 meters. Figure(\ref{fig:bucket_fixed}) shows how the water level is rising after each precipitation event, but also how it drops if the precipitation ends. Now the flat part of the curves have two physical interpretations. Firstly, no precipitation occurs in these time slots as indicated by the grey line in the figure. Secondly,the bucket may have become full and is unable to store more water. Already in the first zero-precipitation window the shallowest bucket(0.2 meters)became full. The 0.4 meters deep bucket was close to full, but managed some more centimetres before getting filled in the first summer.
-One interesting feature is that both the 0.8 meters and 1.0 meters buckets makes it though the entire summer without reaching their limits. \textbf{Some source on if this is usual or not?}. The 0.6 meter bucket reaches saturation sometime towards the end of the first summer. 
+Interestingly the temperature of the second layer is very different when it comes to the different buckets compare to the surface layer. The shallowest bucket appear to have fluctuations very close to that of the surface layer, but in the deeper buckets the temperature variations are drastically damped. For the shallowest bucket the daily temperature difference is close to 10 \textdegree C in most cases, while the deepest bucket only experiences daily variations around 1\textdegree C.     
+
+\begin{figure}[h]
+	\centering 
+	\includegraphics[width=0.5\textwidth]{figures/t_ground}
+	\caption{Temperature of 2.nd layer with varying bucket depth.}
+	\label{fig:t2}
+\end{figure} 
+
+
+Values of latent heat ranges from -200 to almost 500 $W/m^2$. The values are in general a lot higher during summer than during winter. This is expected since the summer temperature is much higher than the winter temperature. There are no apparent reaction in latent heat to the precipitation events although actual latent heat should spike after precipitation events. Although increased soil saturation should have substantial impact on the evaporation, but this process may be to fast in reality to be properly captured by this model. Modelled soil saturation increases after precipitation events, but the direct surface evaporation appears to be poorly captured by the model. In general the shallowest bucket experiences strongest evaporation and hence the largest latent heat flux. A shallow bucket allows for quick saturation which in turn enhances evaporation in the model.
+
+\begin{figure}[h]
+	\centering 
+	\includegraphics[width=0.5\textwidth]{figures/latent_heat}
+	\caption{Latent heat with varying bucket depth.}
+	\label{fig:latent}
+\end{figure} 
+
+During summer and early autumn the shallowest bucket has largest negative sensible heat flux values, while the deepest bucket has the largest positive values. During winter the largest negative sensible heat values are found with the deepest bucket while the largest positive values are a blend from the shallower buckets. Values ranges from 300-500 $W/m^{2}$ in summertime to - 200-300 $W/m^{2}$ in wintertime. Positive flux is heat loss from the surface and negative value are heat gain to the surface. A deep bucket can potentially store more heat copared to a shallow bucket, explaining why the flux is larger for the..
+%Q_h(Tair, T_1, windspeed)  
+
+\begin{figure}[h]
+	\centering 
+	\includegraphics[width=0.5\textwidth]{figures/sensible_heat}
+	\caption{Sensible heat with varying bucket depth.}
+	\label{fig:sensible}
+\end{figure} 
+
+In the shallow bucket the surface temperature reacts to the air temperature quicker than with a deeper bucket, meaning that in a deeper bucket the surface temperature is less affected by the air temperature since the entire bucket has a lower temperature. Hence the flux from the air to the ground in winter is largest for a deep bucket. During summer nights the thin layer of soil looses heat to the air quickly making a large positive flux, while during the day the thin layer of soil is heated rapidly making a large negative flux. Both of these processes reqers more time for a deeper bucket. 
+
+The heat flux through conduction is  positive from the second layer up to the surface layer and vice versa. It ranges between 250 and -250 $W/m^2$ and is largest is summertime. Shallow buckets have the largest values, both positive and negative while the deepest bucket have more modest values between 50 and -50 $W/m^2$. This is a direct consequence of the that fact that the shallow bucket has higher temperature compared to the deeper bucket. More available energy allows for more energy to be conducted to the surrounding layer of soil.
+
+\begin{figure}[h]
+	\centering 
+	\includegraphics[width=0.5\textwidth]{figures/conduction}
+	\caption{Conduction with varying bucket depth.}
+	\label{fig:conduction}
+\end{figure} 
+
+Longwave outgoing radiation varies from 200 to 500 $W/m^2$. It is larger in winter than in summer, which is explained by the higher summer surface temperatures. The different buckets produce a very similar flux in winter, while in summer the flux varies with around 30 $W/m^2$ from the shallowest to the deepest bucket. Like for the conduction the shallowest bucket generally produces both the largest and the smallest flux. This is once again expected as the longwave outgoing flux is determined by the Stefan Boltzman law which is dependent on the surface temperature. 
+
+Moving over to the water balance Figure(\ref{fig:bucket_fixed}) shows how the water level is rising and dropping with time. The flat parts of the curve have two physical interpretations. Firstly, the surface temperature may be below zero, freezing the entire water balance. Secondly,the bucket may have become saturated and is unable to store more water. A flat water level curve from start for the shallowest bucket indicates that this saturates very fast. The other two buckets quickly fills but flattens before saturation due to freezing. From Figure(\ref{fig:bucket_fixed}) we one can also observe that the deepest bucket not saturates before the very end of the two-year period while the 0.5 meter bucket saturates after the first summer. 
 
 \begin{figure}[h]
 	\centering 
 	\includegraphics[width=0.5\textwidth]{figures/bucket_depth_fixed}
-	\caption{Water level in soil dependent on the bucket depth with an fixed initial water level of 0.1 meters. Gray line is precipitation for reference.}
+	\caption{Water level in soil dependent on the bucket depth.   Gray line is precipitation for reference.}
 	\label{fig:bucket_fixed}
 \end{figure}
 
-Since all of the buckets eventually reaches saturation, surface runoff will occur as shown in Figure (\ref{fig:runoff}). The runoff values are relatively high compared to the precipitation values. This is expected since the soil layer in this case is thin. Each of the buckets experiences runoff where one deeper bucket also experiences runoff. Towards the end of the plot in Figure (\ref{fig:runoff}) it may look like only the deepest bucket experiences runoff, but since the deepest bucket experiences runoff at this point in time, all of the other buckets also experiences runoff. 
+Since all of the buckets eventually reaches saturation, surface runoff will occur as shown in Figure (\ref{fig:runoff}). The runoff values are relatively high compared to the precipitation values, apparently being close t the full size of the precipitation event. Each of the buckets experiences runoff where one deeper bucket also experiences runoff. Towards the end of the plot in Figure (\ref{fig:runoff}) it may look like only the deepest bucket experiences runoff, but since the deepest bucket experiences runoff at this point in time, all of the other buckets also experiences runoff here.  
 
 \begin{figure}[h]
 	\centering 
@@ -201,18 +234,15 @@ Since all of the buckets eventually reaches saturation, surface runoff will occu
 \end{figure} 
 
 \section{Discussion}
-The fact that the 0.6 meter bucket in  Figure(\ref{fig:bucket_fixed}) almost made it through the entire summer without getting saturated may indicate that there are some other important processes for removal of water at Finse in action. Evaporation may attribute to this. Resulting values for evaporation displayed in Figure (\ref{fig:evaporation}) reveals daily values for evaporation between 5 and 10 mm to be quite common.    
-\begin{figure}[h]
-	\centering 
-	\includegraphics[width=0.5\textwidth]{figures/evaporation}
-	\caption{Evaporation with varying bucket depth. Gray line is precipitation for reference.}
-	\label{fig:evaporation}
-\end{figure} 
-\\
-\textbf{vurder om du vil ke drainage constant til emre enn 1, vil si at det er realistisk med litt høyere verdi?}
-\section{Future Work}
-calculate how much runoff we have in percent from precipitation
-caculate rates at with saturation increasesdecreases
+
+Overall the modelled energy- and water balance appear to fit the actual conditions at Finse quite well. None of the modelled fluxes are surprisingly large or small. Modelling these balances with different soil depths proved to showcase some interesting features of the water- and energy balance.  
+
+One strange feature of the model is that the water level appears to be rising and rising throughout the two-year period. This is certainly not the case in the true world and may indicate that the deepest bucket is actually too deep to represent this area. This might also be an effect of other parameters in the model being chosen too large or too small. Increasing the drainage constant would solve this problem, but on the other hand this might cause the shallow buckets to drain too fast. It may also be cause by missing drainage features in the model such as streams and creeks moving water through or away from the soil. 
+
+One obvious shortcoming of the model is the simplification of the water balance once the ground temperature in both layers drops below freezing. Since this simplification applies to the periods of the year where the fluxes of water and energy generally not are huge, it might be the case that the actual balances are not altered too much. Despite this some details in the balances may be left out of the picture. Processes like snow infiltration and refreezing of water is not captured by this model. These factor are some out of several that might change the properties of surface runoff and evaporation to mention some. 
+
+Additionally, snow and snowcover is not included in the model. Snow has a great impact on the surface energy balance because of its reflecting abilities. With an high albedo compared to bare soil or rock, snow will reflect most of the incoming shortwave radiation. This drastically reduces the amount of available energy to the environment, hence reducing energy available for evaporation and the sizes of the sensible and latent heat flux. Also, at Finse a lot of the precipitation used in this model falls as snow rather than rain. Including this would further implicate the energy balance since less liquid water would be available for evaporation, and more energy would be spent to melt snow towards the summer month. A suggestion to improvement of this simplified energy balance model would be to incorporate the effect of snow, and investigate how the fluxes would look like for different soil depths with this improvement.     
+
 \twocolumn
 [
 \begin{@twocolumnfalse}
@@ -222,17 +252,21 @@ caculate rates at with saturation increasesdecreases
 
 \begin{thebibliography}{9}
 
+\bibitem{dingman}
+Dingman S. Lawrence \\
+\textit{Physical Hydrology}\\
+Third Edition \\
+Waveland Press, 2015.\\
+
+\bibitem{labus}
+Labus, M., Labus, K. Thermal conductivity and diffusivity of fine-grained sedimentary rocks. J Therm Anal Calorim 132, 1669–1676 (2018). 
+URL: https://doi.org/10.1007/s10973-018-7090-5
+
 \bibitem{muller}
 MÜller et al. 2017\\
 \textit{AROME-MetCoOp: A Nordic Convective-Scale Operational
 Weather Prediction Model}\\
 URL: \url{https://doi.org/10.1175/WAF-D-16-0099.1}
-
-\bibitem{dingman}
-S. Lawrence Dingman \\
-\textit{Physical Hydrology}\\
-Third Edition \\
-Waveland Press, 2015.\\
 
 \bibitem{finse}
 Webpage of Finse Alpine Research Ceenter\\
@@ -240,6 +274,7 @@ URL: \url{https://www.finse.uio.no/about/location/}\\
 Visited 20th of April 2020
 
 \bibitem{yr}
+Webpage of Nowegian forcasting service YR for historical data for Finse.
 URL: \url{https://www.yr.no/nb/historikk/graf/1-111123/Norge/Vestland/Ulvik/Finse}
 
 
